...
    <string name="task_completed_snackbar">%s completed</string>
    <string name="undo">Undo</string>
    <string name="empty_categories_list">No categories</string>
    <string name="no_categories_content_description">No categories available</string>
    <string name="task_title">Task</string>
    <string name="task_description">Task description</string>
    <string name="add">Add</string>
    <string name="task_cd_add_task">Add task</string>
    <string name="no_new_tasks">You have no new tasks</string>
    <string name="no_new_tasks_description">When you have, you will see them here.</string>
    <string name="category_icon_cd">Category</string>
    <string name="category_sheet_save">Save</string>
    <string name="category_cd_add_category">Add category</string>
    <string name="category_add_label">Category</string>
...
