...
}

@Preview
@Composable
fun DismissibleTaskItemPreview() {
    val task1 = Task(title = "Buy milk", dueDate = null)
    val category1 = Category(name = "Books", color = android.graphics.Color.BLUE)
    val taskWithCategory = TaskWithCategory(task = task1, category = category1)
    DismissibleTaskItem(taskWithCategory, {}, {})
}

@Composable
fun SwipeToDismissBackground(dismissDirection: DismissDirection?) {
...

@Composable
@Preview
fun TaskFilterLoadedPreview() {
    val categoryOne = Category(id = 0, name = "Dom", color = android.graphics.Color.BLUE)
    val categoryTwo = Category(id = 1, name = "Life", color = android.graphics.Color.GREEN)
    val categoryThree = Category(id = 2, name = "Work", color = android.graphics.Color.MAGENTA)
    val categories = listOf(categoryOne, categoryTwo, categoryThree)
    val state = CategoryUIState.Loaded(categories)
    val categoryHandler = CategoryStateHandler(state = state)
    TaskFilter(categoryHandler = categoryHandler)
}

...
